force-app/main/default/objects/Street_LLPG__c/Street_LLPG__c.object-meta.xml
<CustomObject>
    <label>Street_LLPG</label>
    <nameField>
        <label>Street_LLPG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Street_LLPG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>