force-app/main/default/objects/Street_LLPG__c/fields/area_name__c.field-meta.xml
<CustomField>
    <fullName>area_name__c</fullName>
    <label>area_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>