force-app/main/default/objects/Street_LLPG__c/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <formula>site_name__c  + &quot; (&quot; +  ward_name__c + &quot; Ward)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Description</label>
    <type>Text</type>
</CustomField>