force-app/main/default/objects/Street_LLPG__c/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <label>Lat</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>