force-app/main/default/objects/Street_LLPG__c/fields/Long__c.field-meta.xml
<CustomField>
    <fullName>Long__c</fullName>
    <label>Long</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>