force-app/main/default/objects/Street_LLPG__c/fields/site_code__c.field-meta.xml
<CustomField>
    <fullName>site_code__c</fullName>
    <label>site_code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>