force-app/main/default/objects/Street_LLPG__c/fields/site_dead_flag__c.field-meta.xml
<CustomField>
    <fullName>site_dead_flag__c</fullName>
    <label>site_dead_flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>