force-app/main/default/objects/Street_LLPG__c/fields/site_name__c.field-meta.xml
<CustomField>
    <fullName>site_name__c</fullName>
    <label>site_name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>