force-app/main/default/objects/Street_LLPG__c/fields/street_type_code__c.field-meta.xml
<CustomField>
    <fullName>street_type_code__c</fullName>
    <label>street_type_code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>