force-app/main/default/objects/Street_LLPG__c/fields/street_type_name__c.field-meta.xml
<CustomField>
    <fullName>street_type_name__c</fullName>
    <label>street_type_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>