force-app/main/default/objects/Street_LLPG__c/fields/ward_name__c.field-meta.xml
<CustomField>
    <fullName>ward_name__c</fullName>
    <label>ward_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>