force-app/main/default/objects/Street_LLPG__c/fields/Xend__c.field-meta.xml
<CustomField>
    <fullName>Xend__c</fullName>
    <label>Xend</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>