force-app/main/default/objects/Street_LLPG__c/fields/Xstart__c.field-meta.xml
<CustomField>
    <fullName>Xstart__c</fullName>
    <label>Xstart</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>