force-app/main/default/objects/Street_LLPG__c/fields/Yend__c.field-meta.xml
<CustomField>
    <fullName>Yend__c</fullName>
    <label>Yend</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>