force-app/main/default/objects/Street_LLPG__c/fields/Ystart__c.field-meta.xml
<CustomField>
    <fullName>Ystart__c</fullName>
    <label>Ystart</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>